@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<!-- Translated using Transifex web application. For support, or if you would like to to help out, please visit your language team! -->
+<!-- Estonian language-Team URL: http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/et/ -->
+<!-- Report language file syntax bugs at: http://trac.xbmc.org/ -->
+
+<strings>
+    <string id="30004">Võimalda fanart.tv artisti fännikunst</string>
+    <string id="30005">Võimalda fanart.tv artisti pisipildid</string>
+</strings>
