@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<!-- Translated using Transifex web application. For support, or if you would like to to help out, please visit your language team! -->
+<!-- Tamil (India) language-Team URL: http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/ta_IN/ -->
+<!-- Report language file syntax bugs at: http://trac.xbmc.org/ -->
+
+<strings>
+    <string id="30004">Fanart.tv இருந்து கலைஞர் விசிறிபடங்களை செயல்படுத்து</string>
+    <string id="30005">Fanart.tv இருந்து கலைஞர் குறும்படம்களை செயல்படுத்து</string>
+</strings>
