@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<!-- Translated using Transifex web application. For support, or if you would like to to help out, please visit your language team! -->
+<!-- Vietnamese language-Team URL: http://www.transifex.com/projects/p/XBMC-Main-Frodo/language/vi/ -->
+<!-- Report language file syntax bugs at: http://trac.xbmc.org/ -->
+
+<strings>
+    <string id="30004">Sử dụng Fanart Nghệ sĩ từ fanart.tv</string>
+    <string id="30005">Lấy hình đại diện cho Nghệ sĩ từ nguồn fanart.tv</string>
+</strings>
