@@ -1,3 +1,6 @@
+[B]1.0.5[/B]
+Updated language files from Transifex
+
 [B]1.0.4[/B]
 Updated language files from Transifex
 
